fix InputStream to String conversion after common-cli upgrade.